<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="challenge.challpass.MainActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_accueil"
        android:textSize="30dp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#FF909090"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button1"
                android:text="@string/title_button1"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:onClick="choixRU"/>
            <Button
                android:id="@+id/button2"
                android:text="@string/title_button2"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button3"
                android:text="@string/title_button3"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
            <Button
                android:id="@+id/button4"
                android:text="@string/title_button4"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
